<resources>
    <string name="app_name">Gestion de Contacts</string>
    <string name="tab_text_0">Messages</string>
    <string name="tab_text_1">Contacts</string>
    <string name="tab_text_2">Groupes</string>

    <!-- Formulaire -->
    <string name="page_formulaire">Contact</string>
    <string name="btn_valid_contact">Valider</string>
    <string name="nom">Nom</string>
    <string name="prenom">Prénom</string>
    <string name="num_tel">Numéro de téléphone</string>
    <string name="mail">Adresse mail</string>
    <string name="error_numtel">Le numéro doit être un numéro de téléphone portable français.</string>


    <!-- Display contact -->
    <string name="page_contact">Contact</string>
    <string name="contact_tel">Téléphone :</string>
    <string name="contact_mail">Adresse mail :</string>
    <string name="del_contact">Supprimer le contact</string>
    <string name="contact_sms_test">Envoyer un SMS test</string>
    <string name="del_group">Supprimer le groupe</string>

    <!-- Group Creation -->
    <string name="name_group">Nom du groupe</string>
    <string name="create_group">CREER</string>

    <!-- Display Group -->
    <string name="manage_contacts">Ajouter des contacts</string>
    <string name="modify_name">Modifier le nom du groupe</string>
    <string name="group_members">Membres :</string>

    <!-- Manage Group -->
    <string name="save">Enregistrer</string>

    <!-- SMS -->
    <string name="page_sms">Envoi d\'un SMS</string>
    <string name="gpe_envoi">Groupe(s) à envoyer :</string>
    <string name="contact_envoi">Contact(s) à envoyer :</string>
    <string name="write_sms">SMS ...</string>
    <string name="btn_send">Envoyer</string>
    <string name="text_message">Message</string>
    <string name="add_contact">Ajouter un contact</string>
    <string name="add_group">Ajouter un groupe</string>
    <string name="to_contact">Envoi contact(s) :</string>
    <string name="to_group">Envoi groupe(s) :</string>

    <!-- Display Message -->
    <string name="page_message">Message</string>
    <string name="en_tete_message">Message envoyé :</string>
    <string name="btn_del_message">Supprimer le message</string>

</resources>